[package]
name = "rocket_hello"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
rocket_codegen = "0.4.4"
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.9.0"
r2d2-diesel = "1.0"
r2d2 = "0.8"
serde_json = "1.0"
custom_derive ="0.1.7"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }


[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]